classDiagram
  %% Violation & Law Enforcement Module - Class Diagram
  %% Standard UML class diagram for Violation and Law Enforcement module

  class ViolationController {
    -ViolationService violationService
    -AlertWebSocketHandler alertWebSocketHandler
    +Map<String,Object> reportViolation(Map<String,Object> violation)
    +List<Map<String,Object>> getViolations(int page, int size)
    +Map<Object,Object> getViolationDetail(String id)
    +Map<String,Object> processViolation(String id, Map<String,Object> processInfo)
    +Map<String,Object> incrementViolationCount()
    +Map<String,Object> getViolationCount()
  }

  class ViolationService {
    -ViolationRepository violationRepository
    -RedisTemplate<String,Object> redisTemplate
    +Violation reportViolation(Map<String,Object> violationData)
    +List<Map<String,Object>> getViolations(int page, int size)
    +Map<Object,Object> getViolationDetail(String violationId)
    +void processViolation(String violationId, Map<String,Object> processInfo)
    +Long getViolationCount()
    +Long incrementViolationCount()
    +void resetViolationCount()
    -Map<String,Object> convertToMap(Violation violation)
  }

  class ViolationRepository {
    +Violation save(Violation v)
    +Optional<Violation> findById(Long id)
    +Page<Violation> findAll(Pageable pageable)
  }

  class Violation {
    +Long id
    +Long intersectionId
    +String plateNumber
    +String violationType
    +String imageUrl
    +Float aiConfidence
    +LocalDateTime occurredAt
    +String status
    +Long processedBy
    +LocalDateTime processedAt
    +BigDecimal penaltyAmount
    +String reviewNotes
    +String appealStatus
    +LocalDateTime createdAt
    +LocalDateTime updatedAt
  }

  class AlertWebSocketHandler {
    -CopyOnWriteArraySet<WebSocketSession> sessions
    +void afterConnectionEstablished(WebSocketSession session)
    +void afterConnectionClosed(WebSocketSession session, CloseStatus status)
    +void sendAlert(String message)
  }

  class WebSocketConfig {
    -AlertWebSocketHandler alertWebSocketHandler
    +void registerWebSocketHandlers(WebSocketHandlerRegistry registry)
  }

  class RedisService {
    -RedisTemplate<String,Object> redisTemplate
    +void setToken(String userId, String token, long expirationTime)
    +String getToken(String userId)
    +void deleteToken(String userId)
    +Long incrementViolationCount()
    +Long getViolationCount()
    +void resetViolationCount()
  }

  %% Relationships
  ViolationController --|> ViolationService : uses
  ViolationController --|> AlertWebSocketHandler : broadcasts
  ViolationService --|> ViolationRepository : persists
  ViolationService --|> RedisService : caches
  ViolationService ..> Violation : creates/updates
  WebSocketConfig --|> AlertWebSocketHandler : registers
